Fixed layout issues

--- a/src/components/about/TeamSection/teamSection.module.scss
+++ b/src/components/about/TeamSection/teamSection.module.scss
@@ -99,7 +99,7 @@
       filter: grayscale(100%) brightness(150%);
     }
     .blur {
-      filter: grayscale(100%) blur(4px) opacity(50%);
+      filter: grayscale(100%) blur(4px) opacity(80%);
     }
   }
 
